# FullStackGpt

./: .gitignore  Home.py  README.md  main.py  notebook_3.ipynb  notebook_4.ipynb  notebook_5.ipynb  pyproject.toml
files/: chapter_one.docx
not_used/: 01_DocumentGPT.py  notebook.ipynb  notebook_2.ipynb
pages/: 01_DocumentGPT.py
