[project]
name = "fullstackgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langchain>=0.2",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.2",
    "langchain-openai>=0.1.20",
    "langchain-text-splitters>=1.0.0",
    "python-magic-bin>=0.4.14",
    "unstructured>=0.18.20",
]
